Added __init__ methods to all classes, renamed ID properties in all classes, initial sync cycle partially done
