# brainless/models/task.py
@@ -13,28 +13,36 @@ from sqlalchemy import or_, and_
 # task and labels association table
 task_labels = db.Table('task_labels',
                         db.metadata, 
-                        db.Column('task_id', db.ForeignKey('task.task_id'), primary_key=True), 
-                        db.Column('label_id', db.ForeignKey('label.label_id'), primary_key=True))
+                        db.Column('task_id', db.ForeignKey('task.id'), primary_key=True), 
+                        db.Column('label_id', db.ForeignKey('label.id'), primary_key=True))
 
 class Task(db.Model, Template):
     """ Task class """
     __tablename__ = 'task'
 
-    task_id = db.Column(db.Integer, primary_key=True)
+    id = db.Column(db.Integer, primary_key=True)
     name = db.Column(db.String(32), nullable=False)
-    project_id = db.Column(db.Integer, db.ForeignKey('project.project_id'), nullable=False)
+    project_id = db.Column(db.Integer, db.ForeignKey('project.id'), nullable=False)
     due_datetime = db.Column(db.DateTime, nullable=True)
     priority = db.Column(db.Integer, nullable=True)
     guid = db.Column(db.String(32), nullable=False)
-    created_timestamp = db.Column(db.DateTime, default=datetime.utcnow)
-    edited_timestamp = db.Column(db.DateTime, default=datetime.utcnow, onupdate=datetime.utcnow)
+    __created_timestamp = db.Column(db.DateTime, default=datetime.utcnow)
+    __edited_timestamp = db.Column(db.DateTime, default=datetime.utcnow, onupdate=datetime.utcnow)
 
     labels = db.relationship('Label', secondary=task_labels, backref='tasks')
+
+    def __init__(self, name, project_id, due_datetime, priority, guid, id=None):
+        self.name = name
+        self.project_id = project_id
+        self.due_datetime = due_datetime
+        self.priority = priority
+        self.guid = guid
+        self.id = id
 
     def exists(self):
 
         try:
-            existing_task = Task.query.filter(or_(Task.task_id == self.task_id, 
+            existing_task = Task.query.filter(or_(Task.id == self.id, 
                                                   and_(Task.guid == self.guid, 
                                                   Task.project_id == self.project_id))).one()   
         except NoResultFound:
